--- a/src/doc/application_documentation.dox
+++ b/src/doc/application_documentation.dox
@@ -3,7 +3,7 @@
 * \page application_documentation Application Documentation
 
 This is a template you can use to document an application (a bunch of scripts
-in a directory in icub-main/app, which instatiate and run a set of modules
+in a directory in icub-main/app, which instantiate and run a set of modules
 to produce a meaningful behavior of the robot).
 
 Replace "exampleApplication" with the name of your application.
@@ -17,14 +17,14 @@ once it is parsed by Doxygen: \ref exampleApplication\endref
 @ingroup icub_applications
 \defgroup icub_exampleApplication exampleApplication
 
-Place here a short description of the application. This will appear in the list 
+Place here a short description of the application. This will appear in the list
 of the applications.
 
 \section intro_sec Description
 This application does not exist for real, it is just a template to be used
 as a guideline for writing good documentation.
 
-Place here a description of the applciation. You might want to use a list as in:
+Place here a description of the application. You might want to use a list as in:
 
 The application does:
 -	this
@@ -40,19 +40,19 @@ Example:
 This module assumes \ref icub_exampleModule "exampleModule" is already running.
 
 \section modules_sec Instantiated Modules
-List here the modules that are instantiated by this application. This is useful to 
+List here the modules that are instantiated by this application. This is useful to
 browse the documentation of other modules. Example:
 - \ref icub_exampleModule "exampleModule"
 
 \section config_sec Configuration Files
-Provide a comprehensive list of the configuration files. Usually located in ./conf. You 
+Provide a comprehensive list of the configuration files. Usually located in ./conf. You
 do not have to necessarely explain what each file does, as this should be already explained
-in the documentation of each module. Link each file with the relative module it configures so 
+in the documentation of each module. Link each file with the relative module it configures so
 that it is possible to look up the documentation.
- 
+
 \section example_sec How to run the application
 List here xml script(s) that allows running the application.
- 
+
 \author your_name
 
 Copyright (C) 2008 RobotCub Consortium
