--- a/AUTHORS
+++ b/AUTHORS
@@ -1,47 +1,45 @@
 This is the list of authors who contributed code to the iCub main package:
 
-* Ugo Pattacini (135 files)
-* Lorenzo Natale (125 files)
-* Alessandro Scalzo (119 files)
+* Ugo Pattacini (116 files)
+* Alessandro Scalzo (108 files)
+* Lorenzo Natale (97 files)
 * Arjan Gijsberts (84 files)
-* Vadim Tikhanoff (74 files)
-* Marco Randazzo (64 files)
-* Alberto Cardellino (61 files)
+* Vadim Tikhanoff (67 files)
+* Alberto Cardellino (64 files)
+* Marco Randazzo (60 files)
 * Paul Fitzpatrick (42 files)
-* Francesco Nori (36 files)
-* Carlo Ciliberto (32 files)
-* Marco Maggiali (32 files)
-* Daniele E. Domenichelli (23 files)
-* Andrea Del Prete (23 files)
-* Valentina Gaggero (21 files)
-* Giorgio Metta (18 files)
+* Marco Maggiali (38 files)
+* Francesco Nori (30 files)
+* Valentina Gaggero (27 files)
+* Daniele E. Domenichelli (26 files)
+* Andrea Del Prete (22 files)
 * Matteo Fumagalli (18 files)
 * Alexandre Bernardino (13 files)
-* Ilaria Gori (12 files)
-* Marco Accame (11 files)
+* Marco Accame (12 files)
+* Carlo Ciliberto (12 files)
 * Serena Ivaldi (9 files)
 * Matteo Taiana (9 files)
 * Alexander Schmitz (8 files)
-* David Vernon (7 files)
 * Martin Peniak (6 files)
+* Giorgio Metta (5 files)
 * Martim Brandao (5 files)
-* Ali Paikan (3 files)
+* Francesco Giovannini (5 files)
 * Inspecta S.L (3 files)
+* Alessandro Roncone (4 files)
 * Ian Fasel (3 files)
 * Ricard Borras (3 files)
-* Fabio Berton (3 files)
+* Sean Ryan Fanello (2 files)
+* Dave Grossman (2 files)
+* Andrew Dankers (2 files)
 * Ronny André Reierstad (2 files)
 * Giovanni Saponaro (2 files)
-* Andrew Dankers (2 files)
-* Dave Grossman (2 files)
+* Andrea del Prete (3 files)
 * Cardellino Alberto (2 files)
-* Francesco Giovannini (2 files)
-* Sean Ryan Fanello (2 files)
-* Andrea del Prete (2 files)
-* Alberto Parmiggiani (1 files)
-* Radu Bogdan Rusu (1 files)
 * Jonas Ruesch (1 files)
-* Vadim Tikhanoff (1 files)
-* Francesc Pinyol (1 files)
+* Radu Bogdan Rusu (1 files)
+* Fabio Berton (1 files)
+* Davide Pollarolo (1 files)
 * Alexis Maldonado (1 files)
+* Alberto Parmiggiani (1 files)
+* Francesc Pinyol (1 files)
 
