--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2014-01-29 Matteo Brunettini <matteo.brunettini@iit.it>
+    * Tagging version 1.1.16
+
+2014-01-29 Matteo Brunettini <matteo.brunettini@iit.it>
     * Tagging version 1.1.15
 
 2014-05-24 Ugo Pattacini <ugo.pattacini@iit.it>
