--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-2014-01-29 Matteo Brunettini <matteo.brunettini@iit.it>
+2016-05-13 Matteo Brunettini <matteo.brunettini@iit.it>
+    * Tagging version 1.1.17
+
+2015-06-15 Matteo Brunettini <matteo.brunettini@iit.it>
     * Tagging version 1.1.16
 
 2014-01-29 Matteo Brunettini <matteo.brunettini@iit.it>
