--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-05-31 Matteo Brunettini <matteo.brunettini@iit.it>
+    * Tagging version 1.4.0
+
 2016-05-13 Matteo Brunettini <matteo.brunettini@iit.it>
     * Tagging version 1.1.17
 
