--- a/src/libraries/iKin/ChangeLog
+++ b/src/libraries/iKin/ChangeLog
@@ -1,3 +1,7 @@
+2016-10-29 Ugo Pattacini <ugo.pattacini@iit.it>
+      * iCubFinger::getChainJoints() helper function extended
+        to deal with analog feedback
+
 2013-05-24 Ugo Pattacini <ugo.pattacini@iit.it>
       * iCubShoulderConstr class exposed under iKinIpopt module
 
