[iKin] failure conditions streamliend via yAssert()

--- a/src/libraries/iKin/ChangeLog
+++ b/src/libraries/iKin/ChangeLog
@@ -1,3 +1,6 @@
+2016-11-18 Ugo Pattacini <ugo.pattacini@iit.it>
+      * failure conditions streamlined via yAssert()
+
 2016-10-29 Ugo Pattacini <ugo.pattacini@iit.it>
       * iCubFinger::getChainJoints() helper function extended
         to deal with analog feedback
