--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2016-11-29 Daniele E. Domenichelli <daniele.domenichelli@iit.it>
+    * Tagging version 1.6.0
+
+2016-11-29 Daniele E. Domenichelli <daniele.domenichelli@iit.it>
     * Tagging version 1.4.1
 
 2016-05-31 Matteo Brunettini <matteo.brunettini@iit.it>
