Dealt with IMU v2.5
- iKin: added kinematic structures for head/imu v2.5
- iKinGazeCtrl: replaced --headV2 with --head_version

cc #285

--- a/src/libraries/iKin/ChangeLog
+++ b/src/libraries/iKin/ChangeLog
@@ -1,3 +1,6 @@
+2016-12-01 Ugo Pattacini <ugo.pattacini@iit.it>
+      * Added head version 2.5
+
 2016-11-18 Ugo Pattacini <ugo.pattacini@iit.it>
       * failure conditions streamlined via yAssert()
 
