--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2017-06-15 Matteo Brunettini <matteo.brunettini@iit.it>
+    * Tagging version 1.8.0
+
+2017-06-15 Matteo Brunettini <matteo.brunettini@iit.it>
     * Tagging version 1.6.1
 
 2016-11-29 Daniele E. Domenichelli <daniele.domenichelli@iit.it>
