--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017-08-11 Diego Ferigo <diego.ferigo@iit.it>
+    * ctrlLib: added IFilter class
+
 2017-06-15 Matteo Brunettini <matteo.brunettini@iit.it>
     * Tagging version 1.8.0
 
