updated release report for 1.9.0
cc @Nicogene

--- a/src/doc/release/v1_9_0.md
+++ b/src/doc/release/v1_9_0.md
@@ -18,6 +18,7 @@ Removed Features
 
 * Removed python scripts to manage the cluster and the applications
   in favor of the use of `yarpmanager`. Old scripts stored in https://github.com/robotology-legacy/python-scripts.
+  Context containing the cluster description renamed into `yarpmanager` 
   
 
 
