--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-01-20 Marco Randazzo <marco.randazzo@iit>
+    * changes to various icubmod devices to adopt the new IVirtualAnalogSensor methods
+      introduced in https://github.com/robotology/yarp/pull/1517
+
 2017-08-11 Diego Ferigo <diego.ferigo@iit.it>
     * ctrlLib: added IFilter class
 
