--- a/src/libraries/ctrlLib/ChangeLog
+++ b/src/libraries/ctrlLib/ChangeLog
@@ -1,3 +1,6 @@
+2018-02-03 Ugo Pattacini <ugo.pattacini@iit.it>
+      * conditional compilation upon ICUB_USE_GSL
+
 2016-11-18 Ugo Pattacini <ugo.pattacini@iit.it>
       * failure conditions streamlined via yAssert()
 
