--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-02-12 Matteo Brunettini <matteo.brunettini@iit.it>
+    * Tagging version 1.10.0
+
 2018-02-03 Ugo Pattacini <ugo.pattacini@iit.it>
     * conditional compilation of ctrlLib upon ICUB_USE_GSL
 
