--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-02-19 Ugo Pattacini <ugo.pattacini@iit.it>
+    * GSL dependency made optional
+
 2018-02-12 Matteo Brunettini <matteo.brunettini@iit.it>
     * Tagging version 1.10.0
 
