--- a/src/libraries/ctrlLib/ChangeLog
+++ b/src/libraries/ctrlLib/ChangeLog
@@ -1,3 +1,6 @@
+2018-02-19 Ugo Pattacini <ugo.pattacini@iit.it>
+      * re-licesing to BSD3
+
 2018-02-03 Ugo Pattacini <ugo.pattacini@iit.it>
       * conditional compilation upon ICUB_USE_GSL
 
