Increase the CMake minimum to 3.5 as YARP 3.0.0

--- a/src/doc/release/v1_11_0.md
+++ b/src/doc/release/v1_11_0.md
@@ -4,6 +4,7 @@ iCub 1.11.0 Release Notes
 Important Changes
 -----------------
 
+* CMake minimum required set to 3.5.
 
 New Features
 ------------
