--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2018-07-31 Matteo Brunettini <matteo.brunettini@iit.it>
+    * Tagging version 1.12.0
+
+2018-07-31 Matteo Brunettini <matteo.brunettini@iit.it>
     * Tagging version 1.10.1
 
 2018-04-19 Marco Randazzo <marco.randazzo@iit>
