--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2019-12-13 Ugo Pattacini <ugo.pattacini@iit.it>
+    * Tagging version 1.14.0
+
 2019-06-27 Matteo Brunettini <matteo.brunettini@iit.it>
     * Tagging version 1.13.0
 
