--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2020-01-29 Ugo Pattacini <ugo.pattacini@iit.it>
+    * YCM is a required dependency
+
 2019-12-13 Ugo Pattacini <ugo.pattacini@iit.it>
     * Tagging version 1.14.0
 
