--- a/app/faceExpressions/doc.dox
+++ b/app/faceExpressions/doc.dox
@@ -3,6 +3,8 @@
 
 \defgroup icub_faceExpressions faceExpressions
 
+\tableofcontents
+
 Start the face expression.
 
 \section intro_sec Description
@@ -17,13 +19,14 @@ None.
 - serial device through \e yarpdev
 
 \code
-./conf/emotions.ini: parameters passed to the emotionInterface module.
+./conf/emotions.ini: parameters passed to the emotionInterface module to run expressions on "classic" iCub.
+./conf/emotions_rfe.ini: parameters passed to the emotionInterface module to run expressions on iCub mounting the rfe board.
 ./conf/serialport.ini: parameters passed to the serial device.
 \endcode
 
-\section example_sec How to run the application
+\section howto_sec How to run the application
 
-Run and execute through \e gyarpmanager .
+Run and execute through \e yarpmanager .
 
 There are two applications:
 
@@ -31,36 +34,63 @@ There are two applications:
 
 If you are using the simulator edit and customize \e appSim.xml.template .
 
-Now from any machine you can rpc to the port "/icub/face/emotions/in" 
+Now from any machine you can rpc to the port "/icub/face/emotions/in"
 and send high level commands.
 
 \code
-set mou <cmd>   -  set an expression in the mouth subsystem
-set eli <cmd>   -  set an expression in the eye-lids subsystem
-set leb <cmd>   -  set an expression in the left eyebrow subsystem
-set reb <cmd>   -  set an expression in the right eyebrow subsystem
-set all <cmd>   -  set an expression in the whole system
+help         to display this message
+
+set <part> <emotion>  set a specific emotion for a defined part
+        the available parts are: mou, eli, leb, reb, all
+        the available emotions are: neu, hap, sad, sur, ang, evi, shy, cun
+
+set color <color>     set the color of the led
+        !! available only for rfe board !!
+        the available colors are: black, white, red, lime, blue, yellow, cyan, magenta, silver, gray, maroon, olive, green, purple, teal, navy
+
+set brig <brig>       set the brightness of the leds
+        !! available only for rfe board !!
+        the brightness is defined by an iteger from 0 to 5, where 0 means led of
+
+set mask (<col_leb> <m_name_leb> <brig_leb>) (<col_reb> <m_name_reb> <brig_reb>) (<col_mou> <m_name_mou> <brig_mou>) set color, bitmask and brightness for each part(leb, reb, mou)
+        !! available only for rfe board !!
+        m_name stands for mask name and the availble bitmasks can be consulted/added in faceExpressions/emotions_rfe.ini
+
 \endcode
 
-The several <cmd> are described in file emotions.ini (see below). You can define your own.
-
-
-You can also send raw commands to the low level driver.
+In particular the bitmask supported are defined in the emotions_rfe.ini file as follow:
 
 \code
-set raw S04
-set raw L03
-set raw R05
-set raw M04
+bitmask_eyebrow_emotions 4
+BM_EB0 (0 4 8 12 16)  //00011111h // surprised
+BM_EB1 (1 5 9 13 17)  //00022222h // neutral, happy, shy
+BM_EB2 (2 6 10 14 18) //00044444h // sad
+BM_EB3 (3 7 11 15 19) //00044444h // angry
+
+bitmask_mouth_emotions 5
+BM_M0  (6 9 10 18)                     //00020300h // neutral
+BM_M1  (0 2 6 9 10 12 14 18)           //00045645h // happy, evil
+BM_M2  (4 5 6 9 10 16 17 18)           //00070670h // sad
+BM_M3  (1 2 3 5 7 8 11 13 14 15 17 19) //000AE9AEh // surprised
+BM_M4  (4 5 6 9 10 16 17 18)           //00070670h // angry
 \endcode
 
-Alternatively you can run:
+For example (6 9 10 18) means specify which that led 6, 9, 10 and 18 has to be set to on of that specific segment.
+The LEDs on the iCub face mounting the rfe board are arranged as follow:
+\warning Note that the enumeration is 1-based in the image but the bitmasks are 0-based
+
+\image html face_expressions_rfe.png "LEDs of the "new" iCub face expressions."
+
+\section example_sec Example scripts
+
+Alternatively you can run the following bash scripts:
 
 \code
 ./cycle.sh: demonstates the face expressions, cycle randomly through a set of expressions.
+./exampleTransition.sh: demonstrate color/brightness transitions supported by the rfe board.
 \endcode
- 
-\author Lorenzo Natale and Alex Bernardino
+
+\author Lorenzo Natale, Alex Bernardino and Nicolò Genesio
 
 Copyright (C) 2008 RobotCub Consortium
 
