--- a/app/cartesianSolver/doc.dox
+++ b/app/cartesianSolver/doc.dox
@@ -6,11 +6,11 @@ The Cartesian Solvers Launcher.
 
 \section intro_sec Description
 This application allows the user to launch instances of the iKinCartesianSolver
-on a specific machine belonging to the cluster. Moreover the iCubInterface and
+on a specific machine belonging to the cluster. Moreover the yarprobotinterface and
 the server part of the gaze controller interface are launched as well.
 
 \section int_sec Instantiated Modules
-- \ref icub_iCubInterface
+- yarprobotinterface
 - \ref iKinCartesianSolver
 - \ref iKinGazeCtrl
 
@@ -22,7 +22,7 @@ Customize the file ./scripts/*.template for your specific platform.
 
 - ./scripts/cartesianSolver.xml.template
   launches solvers for the following parts: <i>right_arm, left_arm, right_leg, left_leg.</i>
-  as well as the iCubInterface and the iKinGazeCtrl.
+  as well as the yarprobotinterface and the iKinGazeCtrl.
 
 \author Ugo Pattacini
 
